syntax = "proto3";

package com.road.yishi.proto.fish;

message FishPoolMsg {
  int32 userId = 1;
  int32 level = 2;
  int32 gp = 3;
  int32 score = 4;
  string cd = 5;
  int32 count = 6;
  int32 maxCount = 7;
  int32 tool1 = 8;
  int32 tool2 = 9;
  int32 tool3 = 10;
  int32 tool4 = 11;
  int32 hookState = 12;
  int32 order = 13;
  repeated int32 fishplayers = 14;
}
