syntax = "proto3";

package com.road.yishi.proto.stackhead;

message StackHeadFreshGuildMsg {
  repeated int32 guildList = 1;
}
