syntax = "proto3";

package com.road.yishi.proto.stackhead;

message StackHeadReportListMsg {
  int32 op = 1;
  int32 type = 2;
  repeated int32 list = 3;
}
