syntax = "proto3";

package com.road.yishi.proto.stackhead;

message StackHeadRespMsg {
  int32 op = 1;
  bool result = 2;
}
