syntax = "proto3";

package com.road.yishi.proto.stackhead;

message StackHeadSeniorGeneralMsg {
  string userUid = 1;
  int32 index = 2;
  bool alive = 3;
  bool inBattle = 4;
}
