syntax = "proto3";

package com.road.yishi.proto.stackhead;

message StackHeadUpdateMsg {
  repeated int32 guildInfoList = 1;
  repeated int32 attackList = 2;
  string battleFieldUid = 3;
}
